hphp/hack/test/typecheck/xhp_attr_spread_generic.php.like_types.exp
File "xhp_attr_spread_generic.php", line 4, characters 13-18:
Invalid xhp value for attribute :my-vec in :my-bar (Typing[4110])
File "xhp_attr_spread_generic.php", line 8, characters 17-19:
Expected ~int because it is an unenforceable type
File "xhp_attr_spread_generic.php", line 17, characters 29-33:
But got string
